# MAAST

./: package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
src/: app.pcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: components.rs  main.rs
src/constants/: versions.ts
src/lib/: ipc.ts  keyed.ts  stores.ts  types.ts
src/routes/: +layout.svelte  +page.js  +page.svelte  Counter.svelte  styles.css
src/routes/dashboards/: +page.svelte  +page.ts  dashboardCreateModal.svelte
src/routes/dashboards/dashboardcreator/: +page.svelte
src/routes/sverdle/: +page.svelte
