[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0.116"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = [ "path-all", "dialog-save", "dialog-open", "dialog-message", "dialog-confirm", "dialog-ask", "fs-exists", "fs-read-file", "fs-remove-file", "fs-read-dir", "fs-copy-file", "fs-rename-file", "fs-create-dir", "fs-write-file", "fs-remove-dir"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
taurpc = { path = "../taurpc" }
specta = { version = "=2.0.0-rc.9", features = ["export"] }
scc = "2.1.0"
pyo3 = "0.21.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
